src/objects/QPMS__Evaluation_Codes__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <formula>QPMS__Device_Manufacturers_Only__r.QPMS__ComplaintId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Conclusions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Conclusions</description>
        <inlineHelpText>Conclusions</inlineHelpText>
        <label>Conclusions</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>Evaluation Codes</relationshipLabel>
        <relationshipName>Evaluation_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Device_Manufacturers_Only__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds the device manufactures only value</description>
        <label>Device Manufacturers Only</label>
        <referenceTo>QPMS__Device_Manufacturers_Only__c</referenceTo>
        <relationshipLabel>Evaluation Codes</relationshipLabel>
        <relationshipName>Evaluation_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <formula>QPMS__Device_Manufacturers_Only__r.QPMS__Follow_Up_Number__c</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Method</description>
        <inlineHelpText>Method</inlineHelpText>
        <label>Method</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>Evaluation Codes (Method)</relationshipLabel>
        <relationshipName>Evaluation_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <formula>QPMS__Device_Manufacturers_Only__r.QPMS__Regulatory_Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Results__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Results</description>
        <inlineHelpText>Results</inlineHelpText>
        <label>Results</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>Evaluation Codes (Results)</relationshipLabel>
        <relationshipName>Evaluation_Codes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Evaluation Codes</label>
    <nameField>
        <label>Evaluation Codes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evaluation Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>